k8s/more-cars/analytics-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-db
  template:
    metadata:
      labels:
        app: analytics-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: analytics-db
              mountPath: /var/lib/mysql
      volumes:
        - name: analytics-db
          persistentVolumeClaim:
            claimName: analytics-db
