k8s/more-cars/analytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
        - name: matomo
          image: matomo:5.8.0-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: analytics
              mountPath: /var/www/html
            - name: analytics-php-config
              mountPath: /var/www/html/config/config.ini.php.override
              subPath: config.ini.php.override
          resources:
            requests:
              cpu: "5m"
              memory: "350Mi"
      volumes:
        - name: analytics
          persistentVolumeClaim:
            claimName: analytics
        - name: analytics-php-config
          configMap:
            name: analytics-php-config
