k8s/more-cars/oauth2-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.3
          args:
            - --provider=oidc
            - --oidc-issuer-url=$(ISSUER_URL)
            - --client-id=$(CLIENT_ID)
            - --client-secret=$(CLIENT_SECRET)
            - --cookie-secret=$(COOKIE_SECRET)
            - --email-domain=*
            - --http-address=0.0.0.0:4180
            - --redirect-url=$(REDIRECT_URL)
            - --upstream=$(UPSTREAM_URL)
            - --reverse-proxy=true
            - --set-xauthrequest=true
            - --pass-authorization-header=true
            - --pass-access-token=true
          ports:
            - containerPort: 4180
