k8s/more-cars/pocket-id-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      containers:
        - name: pocket-id
          image: pocketid/pocket-id:v2.9.0
          volumeMounts:
            - name: pocket-id
              mountPath: /app/data
      volumes:
        - name: pocket-id
          persistentVolumeClaim:
            claimName: pocket-id
