k8s/more-cars/analytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics
spec:
  selector:
    app: analytics
  ports:
    - port: 80
      targetPort: 80
