k8s/more-cars/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: more-cars-gateway
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: more-cars-http
      port: 80
      protocol: HTTP
      hostname: "*.default.more-cars.net"
    - name: more-cars-https
      port: 443
      protocol: HTTPS
      hostname: "*.default.more-cars.net"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: certificate-more-cars-wildcard
    - name: more-cars-public-http
      port: 80
      protocol: HTTP
      hostname: "more-cars.net"
    - name: more-cars-public-https
      port: 443
      protocol: HTTPS
      hostname: "more-cars.net"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: certificate-more-cars
