k8s/more-cars/analytics-https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: analytics-https
spec:
  parentRefs:
    - name: more-cars-gateway
      sectionName: more-cars-https

  hostnames:
    - analytics.default.more-cars.internal

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: "https"
      backendRefs:
        - name: analytics
          port: 80
