k8s/more-cars/pocket-id-https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
spec:
  parentRefs:
    - name: more-cars-gateway
      sectionName: more-cars-https

  hostnames:
    - pocket-id.default.more-cars.internal

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: "https"
      backendRefs:
        - name: pocket-id
          port: 80
